--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,13 @@
-<section class="hero">
-    <div class="container">
-        <h1 class="text-red-400">Hello World!</h1>
+---
+import { Image } from "astro:assets";
+import hero from '../assets/hero.jpeg'
+---
+
+<section class="h-[64vh] hero">
+    <div class="container rounded-lg h-[100%] relative">
+        <div class="absolute inset-y-0 left-16 bottom-[13rem] flex flex-col justify-end text-3xl font-bold drop-shadow-lg">
+            <h1 class="uppercase text-white">Come for the books</h1>
+            <h2 class="uppercase text-white">Stay for the community</h2>
+        </div> 
     </div>
 </section>
