--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,13 +1,13 @@
----
-import { Image } from "astro:assets";
-import hero from '../assets/hero.jpeg'
----
-
 <section class="h-[70vh] hero">
     <div class="container rounded-lg h-[100%] relative">
-        <div class="absolute inset-y-0 left-16 bottom-[13rem] flex flex-col justify-end text-3xl font-bold drop-shadow-lg">
-            <h1 class="uppercase text-white">Come for the books</h1>
-            <h2 class="uppercase text-white">Stay for the community</h2>
+        <div class="absolute inset-y-0 left-16 bottom-[5rem] flex flex-col justify-end font-bold drop-shadow-lg">
+            <h1 class="uppercase text-gray-300 text-3xl">Triple E</h1>
+            <h2 class="uppercase text-gray-300 text-xl">Educate &#8226; Empower	&#8226; Elevate</h2>
+
+            <div class="flex items-center gap-10 !mt-8">
+                <a href="/" class="bg-[#00879E] !p-2.5 !px-3 rounded-lg text-gray-200 font-light">About us</a>
+                <a href="/" class="text-gray-300 font-light">Get involved <i class="fas fa-arrow-right-long text-gray-400 font-light"></i> </a>
+            </div>
         </div> 
     </div>
 </section>
