--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,13 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+			integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+			crossorigin="anonymous" 
+			referrerpolicy="no-referrer" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Triple E</title>
 	</head>
 	<body>
 		<header class="h-[4rem] py-4 !mb-3 header">
 			<div class="container flex justify-between items-center h-[100%] border-b">
-				<h1>Triple E</h1>
+				<h1 class="text-2xl font-bold text-[#00879E]">Triple E</h1>
 				<nav>
 					<ul class="flex items-center gap-10">
 						<li>
@@ -26,7 +30,7 @@
 							<a href="/">Events</a>
 						</li>
 						<li>
-							<a href="/" class="bg-amber-300 !py-2.5 !px-3.5 rounded-lg inline-block">Get involved</a>
+							<a href="/" class="bg-[#00879E] text-white !py-2.5 !px-3.5 rounded-lg inline-block">Get involved</a>
 						</li>
 					</ul>
 				</nav>
