--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,30 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+html,
+body {
+  font-family: "Barlow", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+span,
+li,
+button {
+  letter-spacing: 1.5px;
+  line-height: 1.5;
 }
 
 .container {
@@ -20,8 +41,8 @@
 .hero > .container {
   background-image: linear-gradient(
       0deg,
-      rgba(0, 0, 0, 0.6),
-      rgba(0, 0, 0, 0.6)
+      rgba(0, 0, 0, 0.9),
+      rgba(0, 0, 0, 0.3)
     ),
     url("../assets/hero.jpeg");
   background-repeat: no-repeat;
