--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
-<section class="h-[70vh] hero">
+<section class="h-[76vh] hero">
     <div class="container rounded-lg h-[100%] relative">
         <div class="absolute inset-y-0 left-16 bottom-[5rem] flex flex-col justify-end font-bold drop-shadow-lg">
-            <h1 class="uppercase text-gray-300 text-3xl">Triple E</h1>
+            <h1 class="uppercase text-gray-300 text-3xl !mb-3">Triple E</h1>
             <h2 class="uppercase text-gray-300 text-xl">Educate &#8226; Empower	&#8226; Elevate</h2>
 
             <div class="flex items-center gap-10 !mt-8">
