--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import Header from "../components/Header.astro";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,34 +12,12 @@
 			integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
 			crossorigin="anonymous" 
 			referrerpolicy="no-referrer" />
+			<link rel="stylesheet" href="../styles/global.css" type="text/stylesheet">
 		<meta name="generator" content={Astro.generator} />
 		<title>Triple E</title>
 	</head>
 	<body>
-		<header class="h-[4rem] py-4 !mb-3 header">
-			<div class="container flex justify-between items-center h-[100%] border-b">
-				<h1 class="text-2xl font-bold text-[#00879E]">Triple E</h1>
-				<nav>
-					<ul class="flex items-center gap-10">
-						<li>
-							<a href="/">Home</a>
-						</li>
-						<li>
-							<a href="/">About</a>
-						</li>
-						<li>
-							<a href="/">News</a>
-						</li>
-						<li>
-							<a href="/">Events</a>
-						</li>
-						<li>
-							<a href="/" class="bg-[#00879E] text-white !py-2.5 !px-3.5 rounded-lg inline-block">Get involved</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
-		</header>
+		<Header />
 		<slot />
 	</body>
 </html>
