--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Hero from '../components/Hero.astro';
+import WhatWeDo from '../components/WhatWeDo.astro';
 import Layout from '../layouts/Layout.astro';
 import '../styles/global.css'
 ---
@@ -7,4 +8,5 @@ import '../styles/global.css'
 
 <Layout>
 	<Hero />
+	<WhatWeDo />
 </Layout>
