--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Concert+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   padding: 0;
@@ -9,7 +9,7 @@
 
 html,
 body {
-  font-family: "Barlow", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 h1,
@@ -27,6 +27,10 @@ button {
   line-height: 1.5;
 }
 
+p {
+  font-family: "Barlow", sans-serif;
+}
+
 .container {
   max-width: 1300px;
   margin: auto;
@@ -35,6 +39,10 @@ button {
 /* Header */
 .header > .container {
   border-bottom: 1px solid #dfdfdf;
+}
+
+.header .container .logo {
+  font-family: "Concert One", sans-serif;
 }
 
 /* Hero */
@@ -53,4 +61,81 @@ button {
   -moz-border-radius: 0.5rem;
   -ms-border-radius: 0.5rem;
   -o-border-radius: 0.5rem;
+}
+
+.activities .activity {
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.activities .activity .image-container {
+  overflow: hidden;
+}
+
+.activities .activity .image-container,
+.activities .activity .content {
+  flex: 1;
+}
+
+.activities .activity .image-container img {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+  transition: 0.5s ease-in;
+  -webkit-transition: 0.5s ease-in;
+  -moz-transition: 0.5s ease-in;
+  -ms-transition: 0.5s ease-in;
+  -o-transition: 0.5s ease-in;
+}
+
+.activities .activity:first-child .image-container,
+.activities .activity:first-child .image-container img {
+  border-top-right-radius: 0.5rem;
+}
+
+.activities .activity:first-child .content {
+  border-top-left-radius: 0.5rem;
+}
+
+.activities .activity:last-child .content {
+  border-bottom-left-radius: 0.5rem;
+}
+
+.activities .activity:last-child .image-container,
+.activities .activity:last-child .image-container img {
+  border-bottom-right-radius: 0.5rem;
+}
+
+.activities .activity:nth-child(odd) .image-container {
+  order: 2;
+}
+
+.activities .activity .content {
+  background-color: #006475;
+  height: 100%;
+  padding: 0 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #ececec;
+  transition: 0.5s ease-in;
+  -webkit-transition: 0.5s ease-in;
+  -moz-transition: 0.5s ease-in;
+  -ms-transition: 0.5s ease-in;
+  -o-transition: 0.5s ease-in;
+}
+
+.activities .activity:hover img {
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+.activities .activity:hover .content {
+  background-color: #016e81;
 }
