create footer component

--- a/src/components/Activity.astro
+++ b/src/components/Activity.astro
@@ -10,6 +10,6 @@ const {title, description, image} = Astro.props
     </div>
     <div class="content">
         <h4 class="font-semibold text-2xl !mb-4 uppercase title">{title}</h4>
-        <p class="text-lg">{description}</p>
+        <p class="text-[1.08rem] font-normal">{description}</p>
     </div>
 </div>
