--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
-import Header from "../components/Header.astro";
+import Header from '../components/Header.astro'
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -19,6 +20,7 @@ import Header from "../components/Header.astro";
 	<body>
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
