--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,7 @@
         <div class="absolute inset-y-0 left-16 bottom-[5rem] flex flex-col justify-end font-bold drop-shadow-lg max-w-[600px]">
             <h1 class="uppercase text-gray-300 text-3xl !mb-3">Triple E</h1>
             <h2 class="uppercase text-gray-300 text-xl">Educate &#8226; Empower	&#8226; Elevate</h2>
-            <p class="text-gray-300 font-normal !mt-3">
+            <p class="text-gray-300 font-normal !mt-3 text-[1.1rem]">
                 Building Minds, strengthening communities through Education, Empowerment, and Growth.
             </p>
 
