--- a/src/components/Activity.astro
+++ b/src/components/Activity.astro
@@ -13,6 +13,6 @@ const {title, description, image} = Astro.props
             {title} 
             <i class="fas fa-arrow-right-long text-xs text-gray-300"></i> 
         </h4>
-        <p class="text-[1.08rem] font-normal">{description}</p>
+        <p class="text-[1.1rem] text-gray-200 font-normal">{description}</p>
     </div>
 </div>
