--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,9 @@
 <section class="h-[76vh] hero">
     <div class="container rounded-lg h-[100%] relative">
-        <div class="absolute inset-y-0 left-16 bottom-[5rem] flex flex-col justify-end font-bold drop-shadow-lg max-w-[600px]">
+        <div class="absolute inset-y-0 left-16 bottom-[5rem] flex flex-col justify-end font-bold drop-shadow-lg max-w-[600px] !pr-4">
             <h1 class="uppercase text-gray-300 text-3xl !mb-3">Triple E</h1>
             <h2 class="uppercase text-gray-300 text-xl">Educate &#8226; Empower	&#8226; Elevate</h2>
-            <p class="text-gray-200 font-normal !mt-3 text-[1.1rem]">
+            <p class="hidden md:block text-gray-200 font-normal !mt-3 text-[1.1rem]">
                 Building Minds, strengthening communities through Education, Empowerment, and Growth.
             </p>
 
