--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,11 +52,7 @@ h6 {
 
 /* Hero */
 .hero > .container {
-  background-image: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 1),
-      rgba(0, 0, 0, 0.3)
-    ),
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.3)),
     url("../assets/hero.jpeg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -66,6 +62,11 @@ h6 {
   -moz-border-radius: 0.5rem;
   -ms-border-radius: 0.5rem;
   -o-border-radius: 0.5rem;
+}
+
+/* What we do */
+.activities {
+  margin: 0;
 }
 
 .activities .activity {
@@ -174,4 +175,56 @@ footer ul li {
 footer .copyright {
   font-size: 0.9rem;
   opacity: 0.9;
+}
+
+/* Mobile */
+@media screen and (max-width: 1300px) {
+  /* Hero */
+  .hero > .container {
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  /* What we do */
+  .activities {
+    margin: 3rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10rem;
+    /* padding: 0 1rem; */
+  }
+
+  .activities .activity {
+    grid-template-columns: 1fr;
+    min-height: 750px;
+  }
+
+  .activities .activity:nth-child(odd) .image-container {
+    order: -1;
+  }
+
+  .activities .activity:first-child .content,
+  .activities .activity:last-child .content {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
+  .activities .activity .image-container img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .activities .activity:first-child .image-container,
+  .activities .activity:first-child .image-container img {
+    border-top-right-radius: 0rem;
+  }
+
+  .activities .activity .content {
+    padding: 3rem 2rem;
+  }
 }
