--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,12 @@
-<header class="h-[4rem] py-4 !px-2 !mb-3 header">
+<header class="h-[4rem] py-4 !px-2 !mb-3 fixed top-0 left-0 w-full z-50 bg-white header">
     <div class="container flex justify-between items-center h-full border-b">
-        <!-- Logo -->
+
         <h1 class="text-2xl font-bold text-[#00879E] uppercase logo">Triple E</h1>
 
-        <!-- Mobile Menu Button -->
         <button id="menu-toggle" class="md:hidden text-[#00879E] text-2xl">
-            <i class="fas fa-bars"></i> <!-- FontAwesome Icon -->
+            <i class="fas fa-bars"></i> 
         </button>
 
-        <!-- Navigation Menu -->
         <nav class="hidden md:block">
             <ul class="flex flex-col sm:flex-row sm:items-center sm:gap-10 absolute sm:static top-[4rem] left-0 w-full sm:w-auto bg-white sm:bg-transparent shadow-md sm:shadow-none p-5 sm:p-0" id="mobile-menu">
                 <li><a href="/" class="block py-2 sm:py-0">Home</a></li>
