--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,4 @@
-<section class="h-[60vh] md:h-[76vh] hero">
+<section class="h-[60vh] md:h-[76vh] !mt-18 hero">
     <div class="container rounded-lg h-[100%] relative">
         <div class="absolute inset-y-0 left-16 bottom-[5rem] flex flex-col justify-end font-bold drop-shadow-lg max-w-[600px] !pr-4">
             <h1 class="uppercase text-gray-300 text-3xl !mb-3">Triple E</h1>
