put footer right where it belongs

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import '../styles/global.css'
 ---
 
-<footer class="md:min-h-[15rem]">
+<footer class="absolute bottom-0 w-[100%] h-[5rem]">
     <div class="container">
         <div class="content">
             <h1 class="text-3xl text-[#00879E] font-bold">Triple E</h1>
