--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,6 +36,15 @@ h6 {
   font-family: "Roboto", sans-serif;
 }
 
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  padding-bottom: 5rem;
+}
+
 .container {
   max-width: 1300px;
   margin: auto;
