--- a/src/components/Activity.astro
+++ b/src/components/Activity.astro
@@ -9,7 +9,7 @@ const {title, description, image} = Astro.props
         <Image src={image} alt={title} />
     </div>
     <div class="content">
-        <h4 class="font-semibold text-2xl !mb-4 uppercase flex items-center justify-between">
+        <h4 class="font-semibold text-md md:text-lg lg:text-xl !mb-4 uppercase flex items-center justify-between">
             {title} 
             <i class="fas fa-arrow-right-long text-xs text-gray-300"></i> 
         </h4>
