--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,14 @@
-<header class="h-[4rem] py-4 !px-2 !mb-3 fixed top-0 left-0 w-full z-50 bg-white header">
-    <div class="container flex justify-between items-center h-full border-b">
+<header class="h-[4rem] !mb-3 fixed top-0 left-0 w-full z-50 bg-white header">
+    <div class="container h-full flex justify-between items-center w-[100%]">
 
-        <h1 class="text-2xl font-bold text-[#00879E] uppercase logo">Triple E</h1>
+        <h1 class="text-2xl font-bold text-[#00879E] uppercase logo !pl-2">Triple E</h1>
 
-        <button id="menu-toggle" class="md:hidden text-[#00879E] text-2xl">
+        <button id="menu-toggle" class="md:hidden text-[#00879E] text-2xl cursor-pointer absolute top-4 right-3">
             <i class="fas fa-bars"></i> 
         </button>
 
-        <nav class="hidden md:block">
-            <ul class="flex flex-col sm:flex-row sm:items-center sm:gap-10 absolute sm:static top-[4rem] left-0 w-full sm:w-auto bg-white sm:bg-transparent shadow-md sm:shadow-none p-5 sm:p-0" id="mobile-menu">
+        <nav id="mobile-menu" class="hidden h-full md:block !pr-2 bg-white">
+            <ul class="h-full !pt-4 md:!pt-0 flex flex-col md:flex-row items-center gap-10 sm:static md:top-[4rem]" id="mobile-menu">
                 <li><a href="/" class="block py-2 sm:py-0">Home</a></li>
                 <li><a href="/" class="block py-2 sm:py-0">About</a></li>
                 <li><a href="/" class="block py-2 sm:py-0">News</a></li>
@@ -23,11 +23,14 @@
     </div>
 </header>
 
-<script>
-    const menuToggle = document.getElementById("menu-toggle");
-    const mobileMenu = document.getElementById("mobile-menu");
 
-    menuToggle!.addEventListener("click", () => {
-        mobileMenu!.classList.toggle("hidden");
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const menuToggle = document.getElementById("menu-toggle");
+        const mobileMenu = document.getElementById("mobile-menu");
+
+        // menuToggle!.addEventListener("click", () => {
+        //     mobileMenu!.classList.toggle("hidden");
+        // });
     });
 </script>
