--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -62,7 +62,7 @@ h6 {
 /* Hero */
 .hero > .container {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.3)),
-    url("../assets/hero.jpeg");
+    url("/hero.jpeg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
