change meta description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ import Footer from "../components/Footer.astro";
 			crossorigin="anonymous" 
 			referrerpolicy="no-referrer" />
 			<link rel="stylesheet" href="../styles/global.css" type="text/stylesheet">
-		<meta name="generator" content={Astro.generator} />
+			<meta name="description" content="Educate, Empower, Elevate">
 		<title>Triple E</title>
 	</head>
 	<body>
