--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,11 +10,11 @@
         <nav id="mobile-menu" class="hidden h-full md:block !pr-2 bg-white">
             <ul class="h-full !pt-4 md:!pt-0 flex flex-col md:flex-row items-center gap-10 sm:static md:top-[4rem]" id="mobile-menu">
                 <li><a href="/" class="block py-2 sm:py-0">Home</a></li>
-                <li><a href="/" class="block py-2 sm:py-0">About</a></li>
-                <li><a href="/" class="block py-2 sm:py-0">News</a></li>
-                <li><a href="/" class="block py-2 sm:py-0">Contact</a></li>
+                <li><a href="/about" class="block py-2 sm:py-0">About</a></li>
+                <li><a href="/news" class="block py-2 sm:py-0">News</a></li>
+                <li><a href="/contact" class="block py-2 sm:py-0">Contact</a></li>
                 <li>
-                    <a href="/" class="bg-[#00879E] text-white !py-2.5 !px-3.5 rounded-lg inline-block">
+                    <a href="/get-involved" class="bg-[#00879E] text-white !py-2.5 !px-3.5 rounded-lg inline-block">
                         Get involved
                     </a>
                 </li>
