add navigation links

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,8 +8,8 @@
             </p>
 
             <div class="flex items-center gap-10 !mt-8">
-                <a href="/" class="bg-[#00879E] !py-2 !px-3.5 rounded-md text-gray-200 font-light">About us</a>
-                <a href="/" class="text-gray-300 font-light hidden sm:block">Get involved <i class="fas fa-arrow-right-long text-gray-400 font-light"></i> </a>
+                <a href="/about" class="bg-[#00879E] !py-2 !px-6 rounded-md text-gray-200 font-light">About us</a>
+                <a href="/get-involved" class="text-gray-300 font-light hidden sm:block">Get involved <i class="fas fa-arrow-right-long text-gray-400 font-light"></i> </a>
             </div>
         </div> 
     </div>
