--- a/src/components/about/Hero.astro
+++ b/src/components/about/Hero.astro
@@ -7,7 +7,7 @@
             </p>
 
             <div class="flex items-center gap-10 !mt-8">
-                <a href="/" class="bg-[#00879E] !py-2 !px-5 rounded-md text-gray-200 font-light">Get involved</a>
+                <a href="/get-involved" class="bg-[#00879E] !py-2 !px-5 rounded-md text-gray-200 font-light">Get involved</a>
             </div>
         </div> 
     </div>
