remove after content

--- a/src/components/about/Mission.astro
+++ b/src/components/about/Mission.astro
@@ -36,7 +36,7 @@ const  { title, image, description } = Astro.props.statement
         justify-self: end;
     }
 
-    .statement > .image-container::after {
+    /* .statement > .image-container::after {
         position: absolute;
         content: "";
         background-color: #ecc6a7;
@@ -45,15 +45,15 @@ const  { title, image, description } = Astro.props.statement
         top: 2.5rem;
         z-index: -1;
         border-radius: .8rem;
-    }
+    } */
 
-    .statement:first-child > .image-container::after {
+    /* .statement:first-child > .image-container::after {
         right: -2.5rem;
     }
 
     .statement:last-child > .image-container::after {
         left: -2.5rem;
-    }
+    } */
 
     .statement img {
         height: 100%;
