--- a/src/components/about/Mission.astro
+++ b/src/components/about/Mission.astro
@@ -81,7 +81,7 @@ const  { title, image, description } = Astro.props.statement
         }
 
         .statement .image-container {
-            margin-bottom: 2rem;
+            /* margin-bottom: 2rem; */
             justify-self: center;
         }
     }
