--- a/src/components/about/AboutGallery.astro
+++ b/src/components/about/AboutGallery.astro
@@ -60,4 +60,10 @@ import image from '../../assets/hero.jpeg'
     .images .right-images img:last-child {
         border-bottom-right-radius: .8rem;
     }
+
+    @media screen and (max-width: 1100px) {
+        .images::after {
+            display: none;
+        }
+    }
 </style>
