--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -45,6 +45,7 @@ import { statements } from '../data/data'
         .about-container {
             flex-direction: column;
             text-align: center;
+            gap: 2rem;
         }
     }
 </style>
